bk_ida/gobmkida/c1/is_ko_point
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_ko_point/src/engine/board.c:3052:6: error: use of undeclared identifier 'byte_9AA88C'
v3 = byte_9AA88C[pos]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_ko_point/src/obj/1/board.o] Error 1
